<resources>
    <string name="app_name">Pixie Go Driver</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?</string>
    <string name="create_here">Crea una aquí</string>
    <string name="title_activity_referencia_maps">Map</string>
    <string name="title_activity_driver_map">Pixie Driver</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="mnu_inicio">Inicio</string>
    <string name="mnu_historial">Historial</string>
    <string name="mnu_ayuda">Ayuda</string>
    <string name="mnu_salir">Cerrar sesión</string>
    <string name="mnu_configuracion">Configuración</string>
    <string name="error_inicio_session">Error al iniciar sesión</string>
    <string name="msg_bienvenido">Bienvenido</string>
    <string name="msg_ingresa_contrasena">Por favor ingresa una contraseña</string>
    <string name="msg_ingresa_usuario">Por favor ingresa un usuario</string>
    <string name="msg_account_no_active">Tu cuenta aun no a sido activada, por favor ponte en contacto con PixieLab</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_direccion">Dirección</string>
    <string name="rfc">RFC</string>
    <string name="curp">CURP</string>
    <string name="placas">Placas</string>
    <string name="email">Email</string>
    <string name="hint_confirm_password">Confirma contraseña</string>
    <string name="switch_customer_or_driver">Driver</string>
    <string name="text_button_createaccount">Crear cuenta</string>
    <string name="toolbar_tittle_createaccount">Crear cuenta</string>
    <string name="msj_please_provide_permision_gps">Debes de permitir el acceso a la ubicación para poder trabajar</string>
    <string name="msj_make_panic">TU ALERTA FUE RECIBIDA, EN INSTANTES NUESTRO DEPARTAMENTO SE COMUNICARÁ CONTIGO</string>
    <string name="lblTarifa">Tarifa:</string>
</resources>
